# nikkei_contribution_analysis

./: CLAUDE.md  config.py  contribution_calculator.py  data_manager.py  market_cap_analyzer.py  nikkei_analysis.py  pyproject.toml  visualizer.py  webapp.py  yahoo_jp_scraper.py
nikkei_local/: master_data.csv  price_adjustment_factor.csv
nikkei_local/contributions/: industry_contributions.csv  sector_contributions.csv  stock_contributions.csv
nikkei_local/stock_prices/: all_stock_prices.csv
static/css/: style.css
static/js/: api.js  charts.js  main.js
templates/: index.html
