[project]
name = "nikkei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
